--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0",
     "uuid": "^13.0.0",
